tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010222_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010222-1.c" (c, x86_64-unknown-linux-gnu)
global a : s32i[2] = [18, 6] [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "b", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const -3 : s32i
    %4 = const 0 : s64i
    %5 = get_global @a : s32i[2]*
    %6 = get_element %5[%4] : s32i*
    %7 = load %6 : s32i, align 4
    %8 = mul %3, %7 : s32i [nsw]
    %9 = const 3 : s32i
    %10 = const 1 : s64i
    %11 = get_global @a : s32i[2]*
    %12 = get_element %11[%10] : s32i*
    %13 = load %12 : s32i, align 4
    %14 = mul %9, %13 : s32i [nsw]
    %15 = sub %8, %14 : s32i [nsw]
    %16 = const 12 : s32i
    %17 = div %15, %16 : s32i
    store %17, %1, align 4
    scope {
        %21 = load %1 : s32i, align 4
        %22 = const -6 : s32i
        %23 = cmp ne %21, %22 : bool
        if %23 {
            %24 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %18 = get_global @exit : ((s32i) -> void)*
    %19 = const 0 : s32i
    call @exit(%19) [all]
    %20 = load %0 : s32i
    return %20
}
