tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010224_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010224-1.c" (c, x86_64-unknown-linux-gnu)
global masktab : s16i[6] = [1, 2, 3, 4, 5] [external, default, align 2, dso_local]
global psd : s16i[6] = [50, 40, 30, 20, 10] [external, default, align 2, dso_local]
global bndpsd : s16i[6] = [1, 2, 3, 4, 5] [external, default, align 2, dso_local]

fn logadd(%arg1: s16i*, %arg2: s16i*) -> s16i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s16i*, %arg2: s16i*):
        %61 = alloca s16i*, "a", align 8
        %62 = alloca s16i*, "b", align 8
        %63 = alloca s16i, "__retval", align 2
        store %arg1, %61
        store %arg2, %62
        %64 = load %61 : s16i*, align 8
        %65 = load %64 : s16i, align 2
        %66 = cast(integral) %65 : s32i
        %67 = load %62 : s16i*, align 8
        %68 = load %67 : s16i, align 2
        %69 = cast(integral) %68 : s32i
        %70 = add %66, %69 : s32i [nsw]
        %71 = cast(integral) %70 : s16i
        store %71, %63
        %72 = load %63 : s16i
        return %72
}
fn ba_compute_psd(%arg0: s16i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s16i):
        %14 = alloca s16i, "start", align 2
        %15 = alloca s32i, "i", align 4
        %16 = alloca s32i, "j", align 4
        %17 = alloca s32i, "k", align 4
        %18 = alloca s16i, "lastbin", align 2
        store %arg0, %14
        %19 = const 4 : s16i
        store %19, %18, align 2
        %20 = load %14 : s16i, align 2
        %21 = cast(integral) %20 : s32i
        store %21, %16, align 4
        %22 = load %14 : s16i, align 2
        %23 = cast(integral) %22 : s64i
        %24 = get_global @masktab : s16i[6]*
        %25 = get_element %24[%23] : s16i*
        %26 = load %25 : s16i, align 2
        %27 = cast(integral) %26 : s32i
        store %27, %17, align 4
        %28 = load %16 : s32i, align 4
        %29 = cast(integral) %28 : s64i
        %30 = get_global @psd : s16i[6]*
        %31 = get_element %30[%29] : s16i*
        %32 = load %31 : s16i, align 2
        %33 = load %17 : s32i, align 4
        %34 = cast(integral) %33 : s64i
        %35 = get_global @bndpsd : s16i[6]*
        %36 = get_element %35[%34] : s16i*
        store %32, %36, align 2
        %37 = load %16 : s32i, align 4
        %38 = inc %37 : s32i [nsw]
        store %38, %16, align 4
        scope {
            %39 = load %16 : s32i, align 4
            store %39, %15, align 4
            for cond: {
                %57 = load %15 : s32i, align 4
                %58 = load %18 : s16i, align 2
                %59 = cast(integral) %58 : s32i
                %60 = cmp lt %57, %59 : bool
                condition %60
            } step: {
                %40 = load %15 : s32i, align 4
                %41 = inc %40 : s32i [nsw]
                store %41, %15, align 4
                yield
            } do {
                scope {
                    %42 = load %17 : s32i, align 4
                    %43 = cast(integral) %42 : s64i
                    %44 = get_global @bndpsd : s16i[6]*
                    %45 = get_element %44[%43] : s16i*
                    %46 = load %16 : s32i, align 4
                    %47 = cast(integral) %46 : s64i
                    %48 = get_global @psd : s16i[6]*
                    %49 = get_element %48[%47] : s16i*
                    %50 = call @logadd(%45, %49) : s16i [all]
                    %51 = load %17 : s32i, align 4
                    %52 = cast(integral) %51 : s64i
                    %53 = get_global @bndpsd : s16i[6]*
                    %54 = get_element %53[%52] : s16i*
                    store %50, %54, align 2
                    %55 = load %16 : s32i, align 4
                    %56 = inc %55 : s32i [nsw]
                    store %56, %16, align 4
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s16i
    call @ba_compute_psd(%3) [all]
    scope {
        %6 = const 1 : s64i
        %7 = get_global @bndpsd : s16i[6]*
        %8 = get_element %7[%6] : s16i*
        %9 = load %8 : s16i, align 2
        %10 = cast(integral) %9 : s32i
        %11 = const 140 : s32i
        %12 = cmp ne %10, %11 : bool
        if %12 {
            %13 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
