tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010325_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010325-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s32i[3] = [97, 98] [cir_private, default, align 4, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 1 : s64i
        %6 = get_global @.str : s32i[3]*
        %7 = get_element %6[%5] : s32i*
        %8 = load %7 : s32i, align 4
        %9 = const 98 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
